project/manifests/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: NodePort
  selector:
    app: project
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
