project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-svc
spec:
  type: NodePort
  selector:
    app: project
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3001
