project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-svc
            port:
              number: 80
      - path: /picture.jpg
        pathType: Prefix
        backend:
          service:
            name: project-svc
            port:
              number: 80
      - path: /version
        pathType: Prefix
        backend:
          service:
            name: project-svc
            port:
              number: 80
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 80
